apps/torrenting/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: torrenting
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: torrenting
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
  - name: http
    port: 9696
    targetPort: 9696
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: torrenting
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
  - name: http
    port: 7878
    targetPort: 7878
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: torrenting
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
  - name: http
    port: 8989
    targetPort: 8989
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: torrenting
spec:
  type: ClusterIP
  selector:
    app: flaresolverr
  ports:
  - name: http
    port: 8191
    targetPort: 8191
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: torrenting
spec:
  type: ClusterIP
  selector:
    app: audiobookshelf
  ports:
  - name: http
    port: 13378
    targetPort: 13378
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: torrenting
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    nodePort: 30432
